@@ -210,4 +210,5 @@ void initsurflock(void)
 	c_api[4] = PySurface_LockLifetime;
 	apiobj = PyCObject_FromVoidPtr(c_api, NULL);
 	PyDict_SetItemString(dict, PYGAMEAPI_LOCAL_ENTRY, apiobj);
+	Py_DECREF(apiobj);
 }
